--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <title>To do list app</title>
 
+    <!-- Roboto font embed-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type= "text/css" href="resources/css/style.css">
     <link rel="stylesheet" type= "text/css" href="resources/css/reset.css">
   </head>
   <body>
-hello
+    <header>
+      <input type="text" placeholder="Enter an activity..">
+      <button>
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve"><g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g></svg>
+      </button>
+      </header>
   </body>
 </html>
